--- a/BaseProject/Core/BaseProject.WebApi/appsettings.json
+++ b/BaseProject/Core/BaseProject.WebApi/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "BaseProjectDatabase": "Server=.\\SQL2017;Database=BaseProject;Trusted_Connection=True;Application Name=BaseProject;"
+    "BaseProjectDatabase": "Server=.\\sqlexpress;Database=BaseProject;Trusted_Connection=True;Application Name=BaseProject;"
   },
   "Logging": {
     "LogLevel": {
